- A bit of housekeeping.